Added Lin Coeff

--- a/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
@@ -216,12 +216,12 @@
    "id": "4e26f58c",
    "metadata": {},
    "source": [
-    "## Drop 10 rows containing null in `LifeExpectancy` column\n",
-    "\n",
     "### NOTE 1: \n",
     "- The feature 'LifeExpectancy' has 10 missing values. \n",
     " \n",
     "- Therefore the 10 rows that have NAN values will be deleted. Because 'LifeExpectancy' is a Dependent variable, I will delete those 10 observations with NO labels rather than impute them.\n",
+    "\n",
+    "- Drop 10 rows containing null in `LifeExpectancy` column\n",
     " \n",
     "- The 'LifeExpectancy' feature appear to be **Missing Completely at Random(MCAR)**. The main advantage of **MCAR** is that the analysis is unbiased. Data lost with design fault do not impact other parameters in the model. "
    ]
