--- a/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
+++ b/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "\n",
+    "## Linear Model Coefficient Investigation\n",
+    "\n",
+    "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
+    "\n",
+    "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
+    "\n",
+    "Date: 2023-01-29\n",
+    "\n",
+    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #8\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,22 +37,22 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Loading Regression Libaries\n",
+    "# Loading Modeling Libaries\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn import linear_model\n",
-    "\n"
+    "from sklearn.model_selection import train_test_split, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_test.csv  x_train.csv  y_train.csv\n"
+      "Clean_LE_Data_FEng_4.csv\n"
      ]
     }
    ],
@@ -41,9 +61,61 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2928 entries, 0 to 2927\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Country         2928 non-null   object \n",
+      " 1   Year            2928 non-null   int64  \n",
+      " 2   Status          2928 non-null   int64  \n",
+      " 3   LifeExpectancy  2928 non-null   float64\n",
+      " 4   AdultMort       2928 non-null   float64\n",
+      " 5   EtOH            2928 non-null   float64\n",
+      " 6   PercExpen       2928 non-null   float64\n",
+      " 7   Measles         2928 non-null   int64  \n",
+      " 8   BMI             2928 non-null   float64\n",
+      " 9   lt5yD           2928 non-null   int64  \n",
+      " 10  Polio           2928 non-null   float64\n",
+      " 11  TotalExpen      2928 non-null   float64\n",
+      " 12  DTP             2928 non-null   float64\n",
+      " 13  HIV             2928 non-null   float64\n",
+      " 14  Thin1_19y       2928 non-null   float64\n",
+      " 15  Income          2928 non-null   float64\n",
+      " 16  Education       2928 non-null   float64\n",
+      " 17  Region          2928 non-null   int64  \n",
+      "dtypes: float64(12), int64(5), object(1)\n",
+      "memory usage: 411.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('Clean_LE_Data_FEng_4.csv', header=0) # Drop Index Column\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data splits\n",
+    "\n",
+    "y = df['LifeExpectancy']\n",
+    "\n",
+    "x = df[['Income','Education','Polio','DTP','AdultMort','HIV']]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state = 100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,219 +126,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load training datasets\n",
-    "x_train = pd.read_csv(\"x_train.csv\", header=0)\n",
-    "\n",
-    "x_model = x_train[AdultMort\tEtOH, Measles\tBMI\tlt5yD\tPolio, DTP\tHIV\tThin1_19y\tIncome\tEducation]\n",
-    "\n",
-    "y_train = pd.read_csv(\"y_train.csv\", header=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>HIV</th>\n",
-       "      <th>DTP</th>\n",
-       "      <th>Polio</th>\n",
-       "      <th>lt5yD</th>\n",
-       "      <th>AdultMort</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.782</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.835</td>\n",
-       "      <td>13.7</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>83.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.897</td>\n",
-       "      <td>16.6</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>92.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.673</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>15.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.567</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>31.9</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>693.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Income  Education   HIV   DTP  Polio  lt5yD  AdultMort\n",
-       "0   0.782       15.0   0.1  98.0   98.0      6       28.0\n",
-       "1   0.835       13.7   0.1  96.0   95.0      0       83.0\n",
-       "2   0.897       16.6   0.1  93.0   93.0      0       92.0\n",
-       "3   0.673       13.6   0.1  97.0   97.0      4       15.0\n",
-       "4   0.567       11.8  31.9  96.0   96.0      4      693.0"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Load X-Train \n",
-    "df = pd.read_csv('x_train.csv', header=0)\n",
-    "\n",
-    "# Obtain predictors from Notebook #5:\n",
-    "# 5_Life_Expectancy_Recursive_Feature_Elimination.ipynb\n",
-    "\n",
-    "predictors = ['Income', 'Education', 'HIV', 'DTP', 'Polio', 'lt5yD', 'AdultMort']\n",
-    "\n",
-    "x_train = df[predictors]\n",
-    "\n",
-    "x_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "LinearRegression()"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "lin_reg = LinearRegression()\n",
-    "lin_reg.fit(x_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[51.42162057]\n"
+      "Intercept:  50.66478178594173\n"
      ]
-    }
-   ],
-   "source": [
-    "# print the intercept\n",
-    "print(lin_reg.intercept_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictors = ['Income', 'Education', 'HIV', 'DTP', 'Polio', 'lt5yD', 'AdultMort']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "ename": "ValueError",
-     "evalue": "Shape of passed values is (1, 7), indices imply (7, 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[52], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m coeff_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mDataFrame(lin_reg\u001b[39m.\u001b[39;49mcoef_, predictors, columns\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mCoefficient\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m      2\u001b[0m coeff_df\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py:694\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    684\u001b[0m         mgr \u001b[39m=\u001b[39m dict_to_mgr(\n\u001b[1;32m    685\u001b[0m             \u001b[39m# error: Item \"ndarray\" of \"Union[ndarray, Series, Index]\" has no\u001b[39;00m\n\u001b[1;32m    686\u001b[0m             \u001b[39m# attribute \"name\"\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    691\u001b[0m             typ\u001b[39m=\u001b[39mmanager,\n\u001b[1;32m    692\u001b[0m         )\n\u001b[1;32m    693\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 694\u001b[0m         mgr \u001b[39m=\u001b[39m ndarray_to_mgr(\n\u001b[1;32m    695\u001b[0m             data,\n\u001b[1;32m    696\u001b[0m             index,\n\u001b[1;32m    697\u001b[0m             columns,\n\u001b[1;32m    698\u001b[0m             dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[1;32m    699\u001b[0m             copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[1;32m    700\u001b[0m             typ\u001b[39m=\u001b[39;49mmanager,\n\u001b[1;32m    701\u001b[0m         )\n\u001b[1;32m    703\u001b[0m \u001b[39m# For data is list-like, or Iterable (will consume into list)\u001b[39;00m\n\u001b[1;32m    704\u001b[0m \u001b[39melif\u001b[39;00m is_list_like(data):\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/core/internals/construction.py:351\u001b[0m, in \u001b[0;36mndarray_to_mgr\u001b[0;34m(values, index, columns, dtype, copy, typ)\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[39m# _prep_ndarray ensures that values.ndim == 2 at this point\u001b[39;00m\n\u001b[1;32m    347\u001b[0m index, columns \u001b[39m=\u001b[39m _get_axes(\n\u001b[1;32m    348\u001b[0m     values\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], values\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], index\u001b[39m=\u001b[39mindex, columns\u001b[39m=\u001b[39mcolumns\n\u001b[1;32m    349\u001b[0m )\n\u001b[0;32m--> 351\u001b[0m _check_values_indices_shape_match(values, index, columns)\n\u001b[1;32m    353\u001b[0m \u001b[39mif\u001b[39;00m typ \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39marray\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m    355\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39missubclass\u001b[39m(values\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mtype, \u001b[39mstr\u001b[39m):\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/core/internals/construction.py:422\u001b[0m, in \u001b[0;36m_check_values_indices_shape_match\u001b[0;34m(values, index, columns)\u001b[0m\n\u001b[1;32m    420\u001b[0m passed \u001b[39m=\u001b[39m values\u001b[39m.\u001b[39mshape\n\u001b[1;32m    421\u001b[0m implied \u001b[39m=\u001b[39m (\u001b[39mlen\u001b[39m(index), \u001b[39mlen\u001b[39m(columns))\n\u001b[0;32m--> 422\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mShape of passed values is \u001b[39m\u001b[39m{\u001b[39;00mpassed\u001b[39m}\u001b[39;00m\u001b[39m, indices imply \u001b[39m\u001b[39m{\u001b[39;00mimplied\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Shape of passed values is (1, 7), indices imply (7, 1)"
-     ]
+     "data": {
+      "text/plain": [
+       "[('Income', 9.113970547007359),\n",
+       " ('Education', 0.8860513547432141),\n",
+       " ('Polio', 0.037639530276743494),\n",
+       " ('DTP', 0.04333747425602766),\n",
+       " ('AdultMort', -0.02244631132206054),\n",
+       " ('HIV', -0.47927856071777236)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "coeff_df = pd.DataFrame(lin_reg.coef_, predictors, columns=['Coefficient'])\n",
-    "coeff_df"
+    "reg_model = linear_model.LinearRegression()\n",
+    "\n",
+    "reg_model = LinearRegression().fit(x_train, y_train)\n",
+    "\n",
+    "#Printing the model coefficients\n",
+    "print('Intercept: ',reg_model.intercept_)\n",
+    "\n",
+    "# pair the feature names with the coefficients\n",
+    "list(zip(x, reg_model.coef_))"
    ]
   },
   {
@@ -300,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
