--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -119,11 +119,9 @@
    "id": "7f19f8ea",
    "metadata": {},
    "source": [
-    "**Project Planning**\n",
+    "### Project Planning\n",
     "\n",
-    "Below is a rough outline that for this project.\n",
-    "\n",
-    "- Understand nature of the data .info() .describe()\n",
+    "- [Initial Data Analysis]()\n",
     "- Histograms and boxplots \n",
     "- Value counts \n",
     "- Missing data \n",
@@ -183,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
   "toc": {
    "base_numbering": 1,
@@ -248,7 +246,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "ee253db64471d3bc5400655757329a6a33de9a5ca06cae94740881a9d5095460"
    }
   }
  },
