Added Category Plots

--- a/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
+++ b/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
@@ -165,11 +165,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$Life~Expectancy = 50.7 + ~9.1 \\cdot Income + 0.90 \\cdot Education + 0.04 \\cdot Polio + 0.04 \\cdot DTP - 0.02 \\cdot Adult~Mortality - 0.48 \\cdot HIV$$"
+   ]
   },
   {
    "cell_type": "code",
