--- a/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
@@ -8,11 +8,10 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Initial_Data_Analysis\" data-toc-modified-id=\"Initial_Data_Analysis-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Initial_Data_Analysis</a></span></li><li><span><a href=\"#Load,-rename-columns,-information\" data-toc-modified-id=\"Load,-rename-columns,-information-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load, rename columns, information</a></span></li><li><span><a href=\"#Check-number-of-null-values\" data-toc-modified-id=\"Check-number-of-null-values-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Check number of null values</a></span></li><li><span><a href=\"#Drop-10-rows-containing-null-in-LifeExpectancy-column\" data-toc-modified-id=\"Drop-10-rows-containing-null-in-LifeExpectancy-column-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Drop 10 rows containing null in <code>LifeExpectancy</code> column</a></span><ul class=\"toc-item\"><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li><li><span><a href=\"#NOTE-2:\" data-toc-modified-id=\"NOTE-2:-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>NOTE 2:</a></span></li><li><span><a href=\"#NOTE-3:\" data-toc-modified-id=\"NOTE-3:-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>NOTE 3:</a></span></li></ul></li><li><span><a href=\"#Imputation-using-column-means\" data-toc-modified-id=\"Imputation-using-column-means-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Imputation using column means</a></span></li><li><span><a href=\"#Re-Check-null-data-points\" data-toc-modified-id=\"Re-Check-null-data-points-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Re-Check null data points</a></span></li><li><span><a href=\"#Save-intermediate-dataframe\" data-toc-modified-id=\"Save-intermediate-dataframe-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Save intermediate dataframe</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Initial_Data_Analysis\" data-toc-modified-id=\"Initial_Data_Analysis-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Initial_Data_Analysis</a></span></li><li><span><a href=\"#Load,-rename-columns,-information\" data-toc-modified-id=\"Load,-rename-columns,-information-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load, rename columns, information</a></span></li><li><span><a href=\"#Check-number-of-null-values\" data-toc-modified-id=\"Check-number-of-null-values-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Check number of null values</a></span><ul class=\"toc-item\"><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li><li><span><a href=\"#NOTE-2:\" data-toc-modified-id=\"NOTE-2:-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>NOTE 2:</a></span></li><li><span><a href=\"#NOTE-3:\" data-toc-modified-id=\"NOTE-3:-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>NOTE 3:</a></span></li></ul></li><li><span><a href=\"#Imputation-using-column-means\" data-toc-modified-id=\"Imputation-using-column-means-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Imputation using column means</a></span></li><li><span><a href=\"#Re-Check-null-data-points\" data-toc-modified-id=\"Re-Check-null-data-points-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Re-Check null data points</a></span></li><li><span><a href=\"#Save-intermediate-dataframe\" data-toc-modified-id=\"Save-intermediate-dataframe-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Save intermediate dataframe</a></span></li></ul></div>"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3f5ac5ac",
    "metadata": {},
@@ -211,7 +210,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4e26f58c",
    "metadata": {},
@@ -290,7 +288,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "facc5c8b",
    "metadata": {},
@@ -650,7 +647,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -664,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
