--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling_MAIN.ipynb
@@ -8,11 +8,10 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Executive-Summary\" data-toc-modified-id=\"Executive-Summary-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Executive Summary</a></span></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Introduction</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Executive-Summary\" data-toc-modified-id=\"Executive-Summary-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Executive Summary</a></span></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Introduction</a></span><ul class=\"toc-item\"><li><span><a href=\"#Project-Planning\" data-toc-modified-id=\"Project-Planning-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Project Planning</a></span></li></ul></li></ul></div>"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f29391f8",
    "metadata": {},
@@ -29,7 +28,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b7ae52a0",
    "metadata": {},
@@ -38,14 +36,13 @@
     "\n",
     "**Problem Statement**\n",
     "\n",
-    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. The primary questions we answer are: The primary questions we answer are:\n",
+    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. The primary questions answered here: \n",
     "\n",
     "1. *Which variables are significant and important in modeling and predicting Life Expectancy?*\n",
     "\n",
+    "**Impetus**\n",
     "\n",
-    "2. *What steps should be taken given limited resources?*\n",
-    "\n",
-    "Information from the World Health Organization and United Nations was gathered for the years 2000-2015 for 193 countries in three categories: \n",
+    "Information on [Life Expectancy-Kaggle](https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who) from the World Health Organization and United Nations was gathered for the years 2000-2015 for 193 countries in three categories: \n",
     "\n",
     "1. *Communicable diseases*: Hepatitis B, Measles, Polio, Diphtheria, HIV/AIDS.\n",
     "\n",
@@ -55,7 +52,10 @@
     "\n",
     "3. *Health-related information*: Infant and adult mortality rates, Number of deaths less than 5 yr, Alcohol consumption rates, Child-related malnutrition, Average body mass index per capita.\n",
     "\n",
-    "Six features were deemed most important and used in the final modeling of life expactancy:\n",
+    "\n",
+    "**Important Features**\n",
+    "\n",
+    "21 Features were culled to six (6) features that were deemed most important then used in the final modeling of life expactancy:\n",
     "\n",
     "1. Income\n",
     "2. Education\n",
@@ -64,7 +64,9 @@
     "5. Polio\n",
     "6. AdultMort\n",
     "\n",
-    "Four algorythms were tested on the data and the accuracy alone was used as a benchmark:\n",
+    "**Results**\n",
+    "\n",
+    "Four algorthms were tested on the data and the accuracy alone was used as a benchmark:\n",
     "\n",
     "| Model | Average % Accuracy (cv=5) |\n",
     "|:------|--------------------------:|\n",
@@ -73,20 +75,10 @@
     "| Linear Regression         | 81.0 |\n",
     "| Support Vector Regressor  | 19.0 |\n",
     "\n",
-    "Alternattively, there are many algorthms that can be tested:\n",
-    "\n",
-    "\n",
-    "\n",
-    "1. Ridge Regression\n",
-    "2. Neural Network Regression \n",
-    "3. Lasso Regression \n",
-    "4. KNN Model \n",
-    "5. Gausian Regression\n",
-    "6. Polynomial Regression\n"
+    "---"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "743a0c01",
    "metadata": {},
@@ -98,46 +90,31 @@
     ">\n",
     ">[WHO-Preventing Disease Through Healthy Environments](https://www.who.int/publications/i/item/9241593822)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "CONTINUE:\n",
-    "Not all data features are complete. There are approximately 20+ countries that need more information. Many of these countries are currently in civil unrest or outright war.\n",
-    "\n",
-    "We hope that global resources can be spent cost-effectively. \n",
-    "\n",
     "The dataset was obtained from Kaggle.com:\n",
-    "https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who\n",
-    "\n",
-    "\n",
-    "Data can be found at: https://www.kaggle.com/discussions/general/60603\n"
+    "https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7f19f8ea",
    "metadata": {},
    "source": [
     "### Project Planning\n",
     "\n",
-    "- [Initial Data Analysis]()\n",
-    "- Histograms and boxplots \n",
-    "- Value counts \n",
-    "- Missing data \n",
-    "- Correlation between the metrics \n",
-    "- Explore interesting themes \n",
-    "    - Wealth \n",
-    "    - By location \n",
-    "    - Age vs Education scatterplot \n",
-    "- Feature engineering \n",
-    "- Scaling?\n",
-    "- Model Baseline \n",
-    "- Model comparison with CV "
+    "- [Initial Data Analysis](2_Life_Expectancy_Initial_Data_Analysis.ipynb)\n",
+    "- [Exploratory Data Analysis](3_Life_Expectancy_EDA.ipynb)\n",
+    "- [Exploratory Data Analysis #2](4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb)\n",
+    "- [Pandas Profiling Library](../reports/Test_Pandas_Profiling_Report.ipynb) \n",
+    "- [Feature Engineering](5_Life_Expectancy_Feature_Engineering.ipynb)\n",
+    "- [Recursive Feature Elimination](6_Life_Expectancy_Recursive_Feature_Elimination.ipynb)\n",
+    "- [Modeling](7_Life_Expectancy_Modeling.ipynb) \n",
+    "- [Discussion of Linear Model](8-Life_Expectancy_Linear_Coefficients.ipynb)\n",
+    "- [Results](8-Life_Expectancy_Groupings.ipynb)\n",
+    "\n",
+    "---"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1c2b6b22",
    "metadata": {},
@@ -181,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
