--- a/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
+++ b/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
@@ -8,11 +8,10 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Exploratory_Data_Analysis_PART_2\" data-toc-modified-id=\"Exploratory_Data_Analysis_PART_2-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Exploratory_Data_Analysis_PART_2</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Exploratory_Data_Analysis_PART_2\" data-toc-modified-id=\"Exploratory_Data_Analysis_PART_2-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Exploratory_Data_Analysis_PART_2</a></span><ul class=\"toc-item\"><li><span><a href=\"#Re-check-correlations-of-numeric-vars\" data-toc-modified-id=\"Re-check-correlations-of-numeric-vars-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Re-check correlations of numeric vars</a></span></li><li><span><a href=\"#NOTE-#3:\" data-toc-modified-id=\"NOTE-#3:-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>NOTE #3:</a></span></li></ul></li></ul></div>"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "64ef5418",
    "metadata": {},
@@ -243,7 +242,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7ff9dad3",
    "metadata": {},
@@ -279,7 +277,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "10edd1f3",
    "metadata": {},
@@ -337,22 +334,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4c8e84e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad7700c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cbb1c379",
    "metadata": {},
    "outputs": [],
@@ -361,7 +342,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
