--- a/notebooks/6_Life_Expectancy_Recursive_Feature_Elimination.ipynb
+++ b/notebooks/6_Life_Expectancy_Recursive_Feature_Elimination.ipynb
@@ -12,7 +12,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e8f969db",
    "metadata": {},
@@ -1082,7 +1081,7 @@
    "source": [
     "### NOTE 2: Inference\n",
     "    \n",
-    "- Try first model with `Income`, `Education`,`HIV`, `DTP`, `Polio`, `lt5y_D`,`AdultMort`"
+    "- **USE** For first model: `Income`, `Education`,`HIV`, `DTP`, `Polio`, `lt5y_D`, `AdultMort`"
    ]
   },
   {
@@ -1096,7 +1095,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1110,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
