--- a/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
+++ b/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
@@ -277,11 +277,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "10edd1f3",
    "metadata": {},
    "source": [
-    "### NOTE #3:\n",
+    "### NOTE #1:\n",
     "\n",
     "- The absolute values of correlations between Life Expectancy and {Income:0.69} and {Education:0.72} are greatest.\n",
     "\n",
@@ -356,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
   "toc": {
    "base_numbering": 1,
