--- a/notebooks/7_Life_Expectancy_Modeling.ipynb
+++ b/notebooks/7_Life_Expectancy_Modeling.ipynb
@@ -12,7 +12,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b3e8eadd",
    "metadata": {},
@@ -299,7 +298,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e62361dd",
    "metadata": {},
@@ -413,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
