--- a/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
+++ b/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,7 +164,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,7 +196,35 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
-  "orig_nbformat": 4,
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  },
   "vscode": {
    "interpreter": {
     "hash": "ee253db64471d3bc5400655757329a6a33de9a5ca06cae94740881a9d5095460"
