Added Groupby and Cat plots

--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling.ipynb
@@ -99,7 +99,7 @@
    "id": "7f19f8ea",
    "metadata": {},
    "source": [
-    "### Project Planning\n",
+    "### Project file structure\n",
     "\n",
     "- [Initial Data Analysis](2_Life_Expectancy_Initial_Data_Analysis.ipynb)\n",
     "- [Exploratory Data Analysis](3_Life_Expectancy_EDA.ipynb)\n",
@@ -109,9 +109,15 @@
     "- [Recursive Feature Elimination](6_Life_Expectancy_Recursive_Feature_Elimination.ipynb)\n",
     "- [Modeling](7_Life_Expectancy_Modeling.ipynb) \n",
     "- [Discussion of Linear Model](8-Life_Expectancy_Linear_Coefficients.ipynb)\n",
-    "- [Results](8-Life_Expectancy_Groupings.ipynb)\n",
-    "\n",
-    "---"
+    "- [Results](8-Life_Expectancy_Groupings.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd07ec9",
+   "metadata": {},
+   "source": [
+    "### Variable examination"
    ]
   },
   {
