--- a/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
@@ -30,33 +30,7 @@
     "\n",
     "---\n",
     "\n",
-    "This python notebook simply takes the original data file `Life_Expectancy_Data.csv` and produces an intermediate file `Clean_LE_Data_w_Means_1.csv`.\n",
-    "\n",
-    "\n",
-    "| **List Of Features** | **Description** |\n",
-    "|:---------------------|:----------------|\n",
-    "| **Year** |  Year  |\n",
-    "| **Country** |   Country |\n",
-    "| **Status** |  Developed(1) or Developing(0) |\n",
-    "| **GDP** |  Gross Domestic Product per capita (in USD) |\n",
-    "| **TotalExpen** |    Total Expenditure |\n",
-    "| **PercExpen** |   Percent Expenditure |\n",
-    "| **Income** |   Income composition of resources, Human Development Index |\n",
-    "| **Population** |   Population of country |\n",
-    "| **Education** |  Years of Education |\n",
-    "| **EtOH** |  Alcohol consumption, litres of pure alcohol per capita  |\n",
-    "| **HepB** |   Hepatitis B: % immunization coverage among 1-year-olds |\n",
-    "| **Measles** |   Number of reported cases per 1,000 population |\n",
-    "| **DTP** |    Diphtheria, tetanus toxoid & pertussis % immunization coverage among 1-year-olds |\n",
-    "| **Polio** |   Pol3: % immunization coverage among 1-year-olds |\n",
-    "| **HIV** |   HIV/AIDS: Deaths per 1,000 (0-4 years) |\n",
-    "| **BMI** |   Average Body Mass Index of entire population |\n",
-    "| **AdultMort** |  Adult Mortality Rates of both sexes (probability of dying between 15 and 60 years per 1000 population) \n",
-    "| **InfD** |   Number of Infant Deaths per 1,000 population |\n",
-    "| **lt5y_D** |  Number of under-five deaths per 1,000 population |\n",
-    "| **Thin1_19y** |  % Prevalence of thinness among children and adolescents 10 < Age < 19 |\n",
-    "| **Thin5_9y** |  % Prevalence of thinness among children and adolescents 5 < Age < 9 |\n",
-    "| **LifeExpectancy** |   Life Expectancy (Yr) |"
+    "This python notebook simply takes the original data file `Life_Expectancy_Data.csv` and produces an intermediate file `Clean_LE_Data_w_Means_1.csv`."
    ]
   },
   {
@@ -72,24 +46,6 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "dd13bccf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ls: cannot access '*.csv': No such file or directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls *.csv"
    ]
   },
   {
@@ -282,7 +238,7 @@
     }
    ],
    "source": [
-    "print('\\nDataframe df shape:', df.shape)\n",
+    "print('\\nDataframe shape:', df.shape)\n",
     "\n",
     "df.isnull().sum()"
    ]
@@ -299,9 +255,7 @@
     "|--|:--------|---------------:|----------:|\n",
     "|1 | Population | 644 | 22.0% |\n",
     "|2 | HepB | 553 |  18.9% |\n",
-    "|3 | GDP | 448 | 15.3% |\n",
-    "|4 | TotalExpen | 226 | 7.7% |\n",
-    "|5 | EtOH | 193 | 6.6% |"
+    "|3 | GDP | 448 | 15.3% |"
    ]
   },
   {
@@ -311,6 +265,7 @@
    "source": [
     "### NOTE 3: \n",
     "- Drop feature columns ['Population', 'HepB', 'GDP'] where % Missing is greater than 15%.\n",
+    "\n",
     "\n",
     "- More data scraping or gathering needs to be done in at least 5 areas.\n",
     "   - 1 \tCountry Population\n",
@@ -360,9 +315,7 @@
     }
    ],
    "source": [
-    "df.drop(['Population', 'HepB', 'GDP'], axis=1, inplace=True)\n",
-    "\n",
-    "df.info()"
+    "df.drop(['Population', 'HepB', 'GDP'], axis=1, inplace=True)"
    ]
   },
   {
@@ -475,169 +428,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3052fce7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean_LE_Data_w_Means_2.csv  Life_Expectancy_Data.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls *.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "db4022dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>LifeExpectancy</th>\n",
-       "      <th>AdultMort</th>\n",
-       "      <th>InfD</th>\n",
-       "      <th>EtOH</th>\n",
-       "      <th>PercExpen</th>\n",
-       "      <th>Measles</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>lt5yD</th>\n",
-       "      <th>Polio</th>\n",
-       "      <th>TotalExpen</th>\n",
-       "      <th>DTP</th>\n",
-       "      <th>HIV</th>\n",
-       "      <th>Thin1_19y</th>\n",
-       "      <th>Thin5_9y</th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Education</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>263.0</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>71.279624</td>\n",
-       "      <td>1154</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>8.16</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>17.3</td>\n",
-       "      <td>0.479</td>\n",
-       "      <td>10.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>0</td>\n",
-       "      <td>59.9</td>\n",
-       "      <td>271.0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>73.523582</td>\n",
-       "      <td>492</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>86</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>8.18</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>0.476</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>0</td>\n",
-       "      <td>59.9</td>\n",
-       "      <td>268.0</td>\n",
-       "      <td>66</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>73.219243</td>\n",
-       "      <td>430</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>89</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>8.13</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>0.470</td>\n",
-       "      <td>9.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Country  Year  Status  LifeExpectancy  AdultMort  InfD  EtOH  \\\n",
-       "0  Afghanistan  2015       0            65.0      263.0    62  0.01   \n",
-       "1  Afghanistan  2014       0            59.9      271.0    64  0.01   \n",
-       "2  Afghanistan  2013       0            59.9      268.0    66  0.01   \n",
-       "\n",
-       "   PercExpen  Measles   BMI  lt5yD  Polio  TotalExpen   DTP  HIV  Thin1_19y  \\\n",
-       "0  71.279624     1154  19.1     83    6.0        8.16  65.0  0.1       17.2   \n",
-       "1  73.523582      492  18.6     86   58.0        8.18  62.0  0.1       17.5   \n",
-       "2  73.219243      430  18.1     89   62.0        8.13  64.0  0.1       17.7   \n",
-       "\n",
-       "   Thin5_9y  Income  Education  \n",
-       "0      17.3   0.479       10.1  \n",
-       "1      17.5   0.476       10.0  \n",
-       "2      17.7   0.470        9.9  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "b05c55fb",
    "metadata": {},
@@ -661,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
