Added 'What exactly is missing?' ipynb

--- a/groupby_test/What Exactly is Missing from Life Expectancy data.ipynb
+++ b/groupby_test/What Exactly is Missing from Life Expectancy data.ipynb
@@ -22,21 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8997c035",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f967772d",
    "metadata": {},
    "outputs": [],
@@ -57,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ce73c839",
    "metadata": {},
    "outputs": [
@@ -391,7 +388,7 @@
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f71f4cfd",
    "metadata": {},
    "outputs": [
@@ -493,7 +490,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "10b6bbba",
    "metadata": {},
    "outputs": [
@@ -595,7 +592,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5f20b38f",
    "metadata": {},
    "outputs": [
@@ -697,7 +694,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "2c04936b",
    "metadata": {},
    "outputs": [
@@ -799,7 +796,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "15fe6895",
    "metadata": {},
    "outputs": [
@@ -901,7 +898,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e1ffbfb4",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1000,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "7f60f394",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1102,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "fd973bde",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1204,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f4d3071d",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1306,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "c4484488",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1408,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1440,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1487,6 +1484,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ee253db64471d3bc5400655757329a6a33de9a5ca06cae94740881a9d5095460"
+   }
   }
  },
  "nbformat": 4,
