--- a/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Life_Expectancy_Initial_Data_Analysis.ipynb
@@ -244,18 +244,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "facc5c8b",
    "metadata": {},
    "source": [
     "### NOTE 2: \n",
-    "- The five features with the highest number of mising vlaues (out of 2928) are:\n",
+    "- The three features with the highest percent of mising vlaues are:\n",
     "\n",
     "|  | Feature | Number Missing | % Missing |\n",
     "|--|:--------|---------------:|----------:|\n",
-    "|1 | Population | 644 | 22.0% |\n",
-    "|2 | HepB | 553 |  18.9% |\n",
-    "|3 | GDP | 448 | 15.3% |"
+    "|1 | Population | 644/2928 | 22.0% |\n",
+    "|2 | HepB | 553/2928 |  18.9% |\n",
+    "|3 | GDP | 448/2928 | 15.3% |"
    ]
   },
   {
@@ -451,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
   },
   "toc": {
    "base_numbering": 1,
